--- a/main/main.html
+++ b/main/main.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="main.css">
-  <link rel="shortcut icon" href="../images/Tic-Tac_Toe2.png" type="image/x-icon">
+  <link rel="stylesheet" href="/main/main.css">
+  <link rel="shortcut icon" href="/images/Tic-Tac_Toe2.png" type="image/x-icon">
 </head>
 <body>
 
